subnet.tf
resource "aws_subnet" "public_1" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.1.0/24"

  availability_zone = "us-east-1a"

  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet-1"
  }
}
resource "aws_subnet" "public_2" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.2.0/24"

  availability_zone = "us-east-1b"

  map_public_ip_on_launch = true

  tags = {
    Name = "public-subnet-2"
  }
}
resource "aws_subnet" "private_app_1" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.3.0/24"

  availability_zone = "us-east-1a"

  tags = {
    Name = "private-app-1"
  }
}
resource "aws_subnet" "private_app_2" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.4.0/24"

  availability_zone = "us-east-1b"

  tags = {
    Name = "private-app-2"
  }
}
resource "aws_subnet" "private_db_1" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.5.0/24"

  availability_zone = "us-east-1a"

  tags = {
    Name = "private-db-1"
  }
}
resource "aws_subnet" "private_db_2" {
  vpc_id = aws_vpc.main.id

  cidr_block = "10.0.6.0/24"

  availability_zone = "us-east-1b"

  tags = {
    Name = "private-db-2"
  }
}
